Combine tools and web_services, update edit
- tools.py and web_services.py had a lot of circular imports. I
combined them into one file. Maybe just services.py is a better name?

- Updated /submit-edit so it checks the /event/<year>/… path to check
for updating.

--- a/config.py.dist
+++ b/config.py.dist
@@ -13,4 +13,6 @@ SECRET_KEY = "superdupersecret"
 ENVIRON = "test"
 TEST_USER = 'username'
 
+SITE_ID = "site_id_hash"
+
 CASCADE_LOGIN = {'username': 'username', 'password': 'password'}
