Updates because of permissions and workflows

--- a/config.py.dist
+++ b/config.py.dist
@@ -17,6 +17,7 @@ TEST_USER = ''
 SITE_ID = ''
 
 CASCADE_LOGIN = {'username': 'username', 'password': 'password'}
+CASCADE_CREATE_LOGIN = {'username': 'username', 'password': 'password'}
 
 API_USERNAME = ''
 API_PASSWORD = ''
