--- a/config.py.dist
+++ b/config.py.dist
@@ -35,3 +35,8 @@ INSTALL_LOCATION = ''
 ##Wufoo
 API_KEYS = ['key1', 'key2']
 WUFOO_BASE_URL = ''
+
+
+#Redirect
+REDIRECT_FILE_PATH = ""
+REDIRECT_MAP_PATH = ""
