--- a/config.py.dist
+++ b/config.py.dist
@@ -14,6 +14,7 @@ SECRET_KEY = ''
 
 FACULTY_BIO_XML_ID = ''
 EVENT_XML_ID = ''
+E_ANNOUNCEMENTS_XML_ID = ''
 
 ENVIRON = ''
 TEST_USER = ''
@@ -43,3 +44,5 @@ WUFOO_BASE_URL = ''
 #Redirect
 REDIRECT_FILE_PATH = ""
 REDIRECT_MAP_PATH = ""
+
+UPLOAD_FOLDER = ""
