--- a/config.py.dist
+++ b/config.py.dist
@@ -46,4 +46,8 @@ REDIRECT_FILE_PATH = ""
 REDIRECT_MAP_PATH = ""
 
 UPLOAD_FOLDER = ""
-THUMBOR_STORAGE_LOCATION = ""
+
+
+THUMBOR_STORAGE_LOCATION = ''
+THUMBOR_RESULT_STORAGE_LOCATION = ''
+THUMBOR_CALL_CMD = []
