--- a/config.py.dist
+++ b/config.py.dist
@@ -52,3 +52,8 @@ UPLOAD_FOLDER = ""
 THUMBOR_STORAGE_LOCATION = ''
 THUMBOR_RESULT_STORAGE_LOCATION = ''
 THUMBOR_CALL_CMD = []
+
+
+METADATA_EVENT_ID = ''
+METADATA_ROBUST_ID = ''
+DATA_DEF_FACULTY_BIO_ID = ''
