Updated sync to possibly pull

--- a/config.py.dist
+++ b/config.py.dist
@@ -56,4 +56,5 @@ THUMBOR_CALL_CMD = []
 
 METADATA_EVENT_ID = ''
 METADATA_ROBUST_ID = ''
+METADATA_JOB_POSTING_ID = ''
 DATA_DEF_FACULTY_BIO_ID = ''
