Updated fac bio deletions to publish all faculty listings

--- a/config.py.dist
+++ b/config.py.dist
@@ -58,3 +58,8 @@ METADATA_EVENT_ID = ''
 METADATA_ROBUST_ID = ''
 METADATA_JOB_POSTING_ID = ''
 DATA_DEF_FACULTY_BIO_ID = ''
+
+FACULTY_LISTING_CAPS_ID = ''
+FACULTY_LISTING_GS_ID = ''
+FACULTY_LISTING_SEM_ID = ''
+FACULTY_LISTING_CAS_ID = ''
