--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,8 @@ upgrade.txt
 
 .idea/misc.xml
 
+db_repository/
+
 db_repository/versions/002_migration.py
 
 db_repository/versions/003_migration.py
