--- a/config.py.dist
+++ b/config.py.dist
@@ -50,6 +50,8 @@ REDIRECT_MAP_PATH = ""
 
 UPLOAD_FOLDER = ""
 
+PROGRAMS_XML = ''
+GSPREAD_PATH = ''
 
 THUMBOR_STORAGE_LOCATION = ''
 THUMBOR_RESULT_STORAGE_LOCATION = ''
