--- a/config.py.dist
+++ b/config.py.dist
@@ -52,6 +52,7 @@ UPLOAD_FOLDER = ""
 
 PROGRAMS_XML = ''
 GSPREAD_PATH = ''
+PROGRAM_SEARCH_CSV = ''
 
 THUMBOR_STORAGE_LOCATION = ''
 THUMBOR_RESULT_STORAGE_LOCATION = ''
