--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,6 @@ redirects.txt.back
 tinker/.DS_Store
 
 tinker/admin/program_search/creds.json
+node_modules/
+bower_components/
+tinker/static/scripts/js/
