move e-ann logic to callback, keep iterate opinion-less

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,9 @@ db_repository/versions/003_migration.py
 redirects.txt.back
 
 tinker/.DS_Store
+
+config/e_announcements_config.py
+
+config/e_announcements_config.py
+
+config/e_announcements_config.py
