--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,7 @@ python:
 # command to install dependencies
 install: "pip install -r requirements.txt"
 
+before_script: import os
+
 # command to run tests
 script: python unit_tests/__init__.py
