--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,13 @@
 language: python
 
 python:
-  - "2.7"
+  - "2.7.10"
 
 env:
-  - "import os"
+  - import os
 
 # command to install dependencies
-install: "pip install -r requirements.txt"
+install: pip install -r requirements.txt
 
 # command to run tests
-script: "python unit_tests/__init__.py"
+script: python unit_tests/__init__.py
