--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,10 @@
 language: python
 
 python:
-  - "2.7.10"
-
-env:
-  - import os
+  - "2.6.9"
 
 # command to install dependencies
 install: pip install -r requirements.txt
 
 # command to run tests
-script: python unit_tests/__init__.py
+script: python unit_tests/__inistet__.py
