--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ python:
 install: pip install -r requirements.txt
 
 # command to run tests
-script: python unit_tests/__inistet__.py
+script: python unit_tests/__init__.py
