--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ python:
 install: pip install -r requirements.txt
 
 # command to run tests
-script: python tinker/unit_tests/__init__.py
+script: python travis_unit_test_script.py
