--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,31 @@ language: python
 python:
   - "2.7"
 
+env:
+  global:
+    - KEYWORDS="'DATA_DEF_PORTAL_TAB_ID','TEST_USER','OFFICE_HOURS_STANDARD_BLOCK','EVENTS_BASE_ASSET',
+                'IMAGE_WITH_DEFAULT_IMAGE_BASE_ASSET','PROGRAM_SEARCH_CSV','ENVIRON','API_USERNAME',
+                'DATA_DEF_FACULTY_BIO_ID','SOAP_URL','REDIRECTS_FILE_PATH','E_ANNOUNCEMENT_WORKFLOW_ID','E_ANN_XML_URL',
+                'INSTALL_LOCATION','TEMPLATE_ID','E_ANNOUNCEMENTS_XML_ID','THUMBOR_RESULT_STORAGE_LOCATION',
+                'EVENTS_XML_URL','DATA_DEF_PROGRAM_SEARCH_ID','UPLOAD_FOLDER',
+                'WSDL_URL','FACULTY_LISTING_CAS_ID','STAGING_DESTINATION_ID',
+                'SQLALCHEMY_MIGRATE_REPO','FACULTY_BIOS_BASE_ASSET','FACULTY_BIOS_XML_ID',
+                'METADATA_PORTAL_ROLES_ID','METADATA_EVENT_ID','DATA_DEF_PORTAL_CHANNEL_ID','API_PASSWORD',
+                'EVENT_XML_ID','FOUNDATION_USE_CDN','FACULTY_BIOS_WORKFLOW_CAS_ID',
+                'CAMPAIGN_MONITOR_KEY','ADMINS','OFFICE_HOURS_XML_URL',
+                'WUFOO_BASE_URL','BASE_ASSET_EVENT_FOLDER','SENTRY_URL',
+                'SITE_ID','CLIENT_ID','CASCADE_LOGIN','SECRET_KEY',
+                'THUMBOR_CALL_CMD','DATA_DEF_PROGRAM_FEED_ID','CACHE_DEFAULT_TIMEOUT','GITHUB_CREDENTIALS',
+                'DATA_DEF_PROGRAM_BLOCK_ID','API_URL','E_ANN_ADMINS',
+                'FACULTY_BIOS_ADMINS','METADATA_JOB_POSTING_ID','FACULTY_BIOS_WORKFLOW_SEM_ID',
+                'FACULTY_LISTING_CAPS_ID','SQLALCHEMY_DATABASE_URI','BASE_URL',
+                'FACULTY_BIOS_XML_URL','METADATA_ROBUST_ID','E_ANN_BASE_ASSET','EVENTS_FOLDER_ID',
+                'EVENTS_WORKFLOW_ID','FOUNDATION_USE_MINIFIED','BASE_ASSET_BASIC_FOLDER',
+                'FACULTY_LISTING_SEM_ID','FACULTY_BIOS_WORKFLOW_CAPSGS_ID',
+                'API_KEYS','FACULTY_LISTING_GS_ID',
+                'WSAPI_SECRET','THUMBOR_STORAGE_LOCATION',
+                'FACULTY_BIO_XML_ID','PROGRAMS_XML']
+
 # command to install dependencies
 install: pip install -r requirements.txt
 
