--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ python:
 
 env:
   global:
-    - KEYWORDS="'DATA_DEF_PORTAL_TAB_ID','TEST_USER','OFFICE_HOURS_STANDARD_BLOCK','EVENTS_BASE_ASSET',
+    - KEYWORDS: ['DATA_DEF_PORTAL_TAB_ID','TEST_USER','OFFICE_HOURS_STANDARD_BLOCK','EVENTS_BASE_ASSET',
                 'IMAGE_WITH_DEFAULT_IMAGE_BASE_ASSET','PROGRAM_SEARCH_CSV','ENVIRON','API_USERNAME',
                 'DATA_DEF_FACULTY_BIO_ID','SOAP_URL','REDIRECTS_FILE_PATH','E_ANNOUNCEMENT_WORKFLOW_ID','E_ANN_XML_URL',
                 'INSTALL_LOCATION','TEMPLATE_ID','E_ANNOUNCEMENTS_XML_ID','THUMBOR_RESULT_STORAGE_LOCATION',
