--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ python:
 
 env:
   global:
-    - KEYWORDS: [DATA_DEF_PORTAL_TAB_ID]
+    - KEYWORDS: DATA_DEF_PORTAL_TAB_ID
 
 # command to install dependencies
 install: pip install -r requirements.txt
