Saving work in unit-tests
This commit will be a failed build in Travis, because I know it’s not
yet finished.

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ Flask-Cache
 Flask-Foundation
 Flask-Script
 Flask-WTF
+Flask-Fixtures
 WTForms-Components
 flask-hmacauth
 suds
@@ -23,3 +24,4 @@ Flask-Classy
 bu-cascade
 blinker
 discover
+importlib
