--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,9 @@ language: python
 python:
   - "2.6.9"
 
+before_install:
+  - "set -o errexit"
+
 # command to install dependencies
 install: pip install -r requirements.txt
 
