--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,11 @@ language: python
 python:
   - "2.6.9"
 
-before_install:
-  - "set -o errexit"
-
 # command to install dependencies
 install: pip install -r requirements.txt
 
 # command to run tests
 script: python travis_testing_script.py
+
+after_failure:
+  - "sleep 10"
