--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,7 @@
-dist: 'trusty'
-
 language: python
 
 python:
-  - "2.6.9"
+  - 2.6.9
 
 # command to install dependencies
 install: pip install -r requirements.txt
@@ -12,4 +10,4 @@ install: pip install -r requirements.txt
 script: python travis_testing_script.py
 
 after_failure:
-  - "sleep 10"
+  - sleep 10
