--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ suds
 simplejson
 --allow-external WTForms
 requests
-Flask-SQLAlchemy
+Flask-SQLAlchemy==2.1
 SQLAlchemy-migrate
 BeautifulSoup
 Flask-Cors
