--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
+SQLAlchemy==1.1.15
+SQLAlchemy-migrate==1.1.15
+Flask-SQLAlchemy==2.1
 six
 Flask
 gunicorn
@@ -12,8 +15,6 @@ suds
 simplejson
 --allow-external WTForms
 requests
-Flask-SQLAlchemy==2.1
-SQLAlchemy-migrate==1.1.15
 BeautifulSoup
 Flask-Cors
 arrow
