--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ SQLAlchemy-migrate
 six
 Flask
 gunicorn
-Flask-Cache
+Flask-Cache # if python2.7 Flask-Caching
 Flask-Foundation
 Flask-Script
 Flask-WTF
