--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -1,5 +1,13 @@
 version: "3.7"
 
+x-secrets: &secrets
+  secrets:
+    - docker_ssh_key
+
+secrets:
+  docker_ssh_key:
+    file: ${HOME}/.ssh/id_rsa_docker
+    
 services:
 
   redis:
